--- a/squadd/views/contact.jade
+++ b/squadd/views/contact.jade
@@ -6,7 +6,7 @@ block content
 			h3 Contact us
 			form(method="POST" action="/contact/send")
 				.form-group					
-					input.form-control(type="text" name="name" placeholder="Your Name")
+					input.form-control(type="text" name="firstName" placeholder="Your Name")
 				.form-group				
 					input.form-control(type="email" name="email" placeholder="Your email address")
 				.form-group
