--- a/squadd/views/contact.jade
+++ b/squadd/views/contact.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-	.row
+	.row.contact
 		.col-md-8.col-md-offset-2
 			h3 Contact us
 			form(method="POST" action="/contact/send")
