--- a/squadd/views/layout.jade
+++ b/squadd/views/layout.jade
@@ -31,6 +31,10 @@ html
 					ul.nav.navbar-nav.navbar-right
 						li
 							a(href="/contact" class="nav-colors") Contact Us
-						li
-							a(href="/users" class="nav-colors") Login
-		block content
+		main.main-content
+			block content
+		footer.footer
+			.container
+				p &#169 2016 squaddapp all rights reserved
+			
+		
