fixed facebook button

--- a/squadd/views/index.jade
+++ b/squadd/views/index.jade
@@ -8,7 +8,7 @@ block content
 				img(src="/images/logo_v1.png", alt="logo" class="logo")
 		.row
 			.col-md-12.fb-btn
-				div(class="fb-share-button" data-href="http://squaddapp.herokuapp.com/" data-layout="button")
+				div(class="fb-share-button" data-href="http://squaddapp.com/" data-layout="button")
 			.col-md-12
 				h1.slogan Making Designated Driving Awesome!
 		.row
