--- a/squadd/public/stylesheets/style.css
+++ b/squadd/public/stylesheets/style.css
@@ -2,7 +2,14 @@ body {
 	font-family: 'Open Sans', sans-serif;
 	background-color: #44b5e4;
 	color: #fff;
-
+	background-image: url('../images/bg2.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-attachment: fixed;
+}
+.landing {
+	padding-top: 100px;
 }
 
 .row {
@@ -33,6 +40,37 @@ body {
 	text-align: center;
 	font-weight: lighter;
 }
+.slogan2 {
+	text-align: center;
+	font-weight: bold;
+}
+video#bgvid {
+    position: fixed;
+    top: 30%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: 150%;
+    z-index: -100;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background-size: cover;
+
+}
+.overlay {
+	top: -10%;
+	position: fixed;;
+	min-width: 100%;
+	min-height: 100%;
+	width: auto;
+	height: 120%;
+	z-index: -90;
+	  background-size: cover;
+		background-color: rgba(57,152,191,0.3);
+}
 .fb-btn {
 	text-align: center;
 }
@@ -45,14 +83,14 @@ body {
 }
 .sign-up input {
 	display: inline-block;
-	background-color: rgba(256, 256, 256, 0.3);
+	background-color: rgba(256, 256, 256, 0.8);
 	border: none;
 	border-radius: 0px;
 	color: #fff;
 	text-align: center;
 }
 .sign-up input::-webkit-input-placeholder {
-color: rgba(255,255,255, 0.6);
+color: #3998bf; /*rgba(255,255,255, 0.6);*/
 text-align: center;
 }
 .sign-up button {
